--- a/awesome/index.html
+++ b/awesome/index.html
@@ -21,7 +21,7 @@
                     </div>
                     <div class="awesome_block_one">
                         <div class="awesome_block_one_circle">
-                            <img src="../images/Group.svg" alt="buld">
+                            <img src="images/Group.svg" alt="buld">
                         </div>
                         <h4>Thoughtful Design</h4>
                         <h5>Lorem ipsum dolor sit amet, consectetur adipiscing 
@@ -29,7 +29,7 @@
                     </div>
                     <div class="awesome_block_two">
                         <div class="awesome_block_two_circle">
-                            <img src="../images/Vector.svg" alt="keyboard">
+                            <img src="images/Vector.svg" alt="keyboard">
                         </div>
                         <h4>Thoughtful Design</h4>
                         <h5>Lorem ipsum dolor sit amet, consectetur adipiscing 
@@ -37,7 +37,7 @@
                     </div>
                     <div class="awesome_block_three">
                         <div class="awesome_block_three_circle">
-                            <img src="../images/Vectors.svg" alt="lightning">
+                            <img src="images/Vectors.svg" alt="lightning">
                         </div>
                         <h4>Thoughtful Design</h4>
                         <h5>Lorem ipsum dolor sit amet, consectetur adipiscing 
