--- a/awesome/index.html
+++ b/awesome/index.html
@@ -14,8 +14,8 @@
         <div class="wrapper">
             <h2>WHY THIS IS AWESOME</h2>
             <div class="awesome_block_line"></div>
-            <div class="awesome_block_text_h5">
-                <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
+            <div class="awesome_block_text_p">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div class="awesome_block">
                 <div class="awesome_block_one">
@@ -23,24 +23,24 @@
                         <img src="images/Group.svg" alt="buld">
                     </div>
                     <h4>Thoughtful Design</h4>
-                    <h5>Lorem ipsum dolor sit amet, consectetur adipiscing 
-                        elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
+                        elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
                 </div>
                 <div class="awesome_block_two">
                     <div class="awesome_block_two_circle">
                         <img src="images/Vector.svg" alt="keyboard">
                     </div>
                         <h4>Thoughtful Design</h4>
-                    <h5>Lorem ipsum dolor sit amet, consectetur adipiscing 
-                        elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
+                        elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
                 </div>
                 <div class="awesome_block_three">
                     <div class="awesome_block_three_circle">
                         <img src="images/Vectors.svg" alt="lightning">
                     </div>
                     <h4>Thoughtful Design</h4>
-                    <h5>Lorem ipsum dolor sit amet, consectetur adipiscing 
-                        elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
+                        elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
                 </div>
             </div>
         </div>
