--- a/awesome/index.html
+++ b/awesome/index.html
@@ -14,28 +14,28 @@
         <div class="wrapper">
             <h2>WHY THIS IS AWESOME</h2>
             <div class="awesome_block_line"></div>
-            <div class="awesome_block_text_p">
+            <div class="awesome_block_text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div class="awesome_block">
-                <div class="awesome_block_one">
-                    <div class="awesome_block_one_circle">
+                <div class="awesome_block_cart awesome_block_cart_one">
+                    <div class="awesome_block_circle awesome_block_circle_one">
                         <img src="images/Group.svg" alt="buld">
                     </div>
                     <h4>Thoughtful Design</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
                         elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
                 </div>
-                <div class="awesome_block_two">
-                    <div class="awesome_block_two_circle">
+                <div class="awesome_block_cart awesome_block_cart_two">
+                    <div class="awesome_block_circle awesome_block_circle_two">
                         <img src="images/Vector.svg" alt="keyboard">
                     </div>
                         <h4>Thoughtful Design</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
                         elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
                 </div>
-                <div class="awesome_block_three">
-                    <div class="awesome_block_three_circle">
+                <div class="awesome_block_cart awesome_block_cart_three">
+                    <div class="awesome_block_circle awesome_block_circle_three">
                         <img src="images/Vectors.svg" alt="lightning">
                     </div>
                     <h4>Thoughtful Design</h4>
