--- a/awesome/index.html
+++ b/awesome/index.html
@@ -13,8 +13,8 @@
     <main>
         <div class="wrapper">
             <h2>WHY THIS IS AWESOME</h2>
-            <div class="awesome_block_line"></div>
-            <div class="awesome_block_text">
+            <div class="block_line"></div>
+            <div class="block_text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div class="awesome_block">
@@ -41,6 +41,54 @@
                     <h4>Thoughtful Design</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
                         elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
+                </div>
+            </div>  
+            <div class="pricing">
+                <h2>PRICING OPTIONS</h2>
+                <div class="block_line"></div>
+                <div class="block_text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="pricing_infa">
+                    <div class="pricing_block">
+                        <ul class="pricing_block_list">
+                        <li class="pricing_block_list pricing_block_list_tarif">Basic</li>
+                        <li class="pricing_block_list pricing_block_list_price">$10</li>
+                        <li class="pricing_block_list pricing_block_list_information">Free for life</li>
+                        <li class="pricing_block_list">1 Gb Of Space</li>
+                        <li class="pricing_block_list">1 Gb Of Space</li>
+                        <li class="pricing_block_list">1 Gb Of Space</li>
+                        <li class="pricing_block_list">1 Gb Of Space</li>
+                        <li class="pricing_block_list">1 Gb Of Space</li>
+                        <li class="pricing_block_list">1 Gb Of Space</li>
+                        </ul>
+                    </div>
+                    <div class="pricing_block pricing_block_two">
+                        <ul class="pricing_block_list">
+                            <li class="pricing_block_list pricing_block_list_tarif">Optima</li>
+                            <li class="pricing_block_list pricing_block_list_price">$20</li>
+                            <li class="pricing_block_list pricing_block_list_information">Free for life</li>
+                            <li class="pricing_block_list">1 Gb Of Space</li>
+                            <li class="pricing_block_list">1 Gb Of Space</li>
+                            <li class="pricing_block_list">1 Gb Of Space</li>
+                            <li class="pricing_block_list">1 Gb Of Space</li>
+                            <li class="pricing_block_list">1 Gb Of Space</li>
+                            <li class="pricing_block_list">1 Gb Of Space</li>
+                        </ul>
+                    </div>
+                    <div class="pricing_block pricing_block_three">
+                        <ul class="pricing_block_list">
+                            <li class="pricing_block_list pricing_block_list_tarif">Pro</li>
+                            <li class="pricing_block_list pricing_block_list_price">$30</li>
+                            <li class="pricing_block_list pricing_block_list_information">Free for life</li>
+                            <li class="pricing_block_list">1 Gb Of Space</li>
+                            <li class="pricing_block_list">1 Gb Of Space</li>
+                            <li class="pricing_block_list">1 Gb Of Space</li>
+                            <li class="pricing_block_list">1 Gb Of Space</li>
+                            <li class="pricing_block_list">1 Gb Of Space</li>
+                            <li class="pricing_block_list">1 Gb Of Space</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
