--- a/awesome/index.html
+++ b/awesome/index.html
@@ -13,29 +13,29 @@
     <main>
         <div class="wrapper">
             <h2>WHY THIS IS AWESOME</h2>
-            <div class="block_line"></div>
-            <div class="block_text">
+            <div class="block-line"></div>
+            <div class="block-text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
-            <div class="awesome_block">
-                <div class="awesome_block_cart awesome_block_cart_one">
-                    <div class="awesome_block_circle awesome_block_circle_one">
+            <div class="awesome-block">
+                <div class="awesome-block__cart awesome-block__cart_one">
+                    <div class="awesome-block__circle awesome-block_circle_one">
                         <img src="images/Group.svg" alt="buld">
                     </div>
                     <h4>Thoughtful Design</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
                         elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
                 </div>
-                <div class="awesome_block_cart awesome_block_cart_two">
-                    <div class="awesome_block_circle awesome_block_circle_two">
+                <div class="awesome-block__cart awesome-block__cart_two">
+                    <div class="awesome-block__circle awesome-block__circle_two">
                         <img src="images/Vector.svg" alt="keyboard">
                     </div>
                         <h4>Thoughtful Design</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
                         elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
                 </div>
-                <div class="awesome_block_cart awesome_block_cart_three">
-                    <div class="awesome_block_circle awesome_block_circle_three">
+                <div class="awesome-block__cart awesome-block__cart_three">
+                    <div class="awesome-block__circle awesome-block__circle_three">
                         <img src="images/Vectors.svg" alt="lightning">
                     </div>
                     <h4>Thoughtful Design</h4>
@@ -45,48 +45,48 @@
             </div>  
             <div class="pricing">
                 <h2>PRICING OPTIONS</h2>
-                <div class="block_line"></div>
-                <div class="block_text">
+                <div class="block-line"></div>
+                <div class="block-text">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
-                <div class="pricing_infa">
-                    <div class="pricing_block">
-                        <ul class="pricing_block_list">
-                        <li class="pricing_block_list pricing_block_list_tarif">Basic</li>
-                        <li class="pricing_block_list pricing_block_list_price">$10</li>
-                        <li class="pricing_block_list pricing_block_list_information">Free for life</li>
-                        <li class="pricing_block_list">1 Gb Of Space</li>
-                        <li class="pricing_block_list">1 Gb Of Space</li>
-                        <li class="pricing_block_list">1 Gb Of Space</li>
-                        <li class="pricing_block_list">1 Gb Of Space</li>
-                        <li class="pricing_block_list">1 Gb Of Space</li>
-                        <li class="pricing_block_list">1 Gb Of Space</li>
+                <div class="pricing-infa">
+                    <div class="pricing-block">
+                        <ul class="pricing-block__list">
+                        <li class="pricing-block__list_text pricing-block__list_text_tarif">Basic</li>
+                        <li class="pricing-block__list_text pricing-block__list_text_price">$10</li>
+                        <li class="pricing-block__list_text pricing-block__list_text_information">Free for life</li>
+                        <li class="pricing-block__list_text">1 Gb Of Space</li>
+                        <li class="pricing-block__list_text">1 Gb Of Space</li>
+                        <li class="pricing-block__list_text">1 Gb Of Space</li>
+                        <li class="pricing-block__list_text">1 Gb Of Space</li>
+                        <li class="pricing-block__list_text">1 Gb Of Space</li>
+                        <li class="pricing-block__list_text">1 Gb Of Space</li>
                         </ul>
                     </div>
-                    <div class="pricing_block pricing_block_two">
-                        <ul class="pricing_block_list">
-                            <li class="pricing_block_list pricing_block_list_tarif">Optima</li>
-                            <li class="pricing_block_list pricing_block_list_price">$20</li>
-                            <li class="pricing_block_list pricing_block_list_information">Free for life</li>
-                            <li class="pricing_block_list">1 Gb Of Space</li>
-                            <li class="pricing_block_list">1 Gb Of Space</li>
-                            <li class="pricing_block_list">1 Gb Of Space</li>
-                            <li class="pricing_block_list">1 Gb Of Space</li>
-                            <li class="pricing_block_list">1 Gb Of Space</li>
-                            <li class="pricing_block_list">1 Gb Of Space</li>
+                    <div class="pricing-block pricing-block__two">
+                        <ul class="pricing-block__list">
+                            <li class="pricing-block__list_text pricing-block__list_text_tarif">Optima</li>
+                            <li class="pricing-block__list_text pricing-block__list_text_price">$20</li>
+                            <li class="pricing-block__list_text pricing-block__list_text_information">Free for life</li>
+                            <li class="pricing-block__list_text">1 Gb Of Space</li>
+                            <li class="pricing-block__list_text">1 Gb Of Space</li>
+                            <li class="pricing-block__list_text">1 Gb Of Space</li>
+                            <li class="pricing-block__list_text">1 Gb Of Space</li>
+                            <li class="pricing-block__list_text">1 Gb Of Space</li>
+                            <li class="pricing-block__list_text">1 Gb Of Space</li>
                         </ul>
                     </div>
-                    <div class="pricing_block pricing_block_three">
-                        <ul class="pricing_block_list">
-                            <li class="pricing_block_list pricing_block_list_tarif">Pro</li>
-                            <li class="pricing_block_list pricing_block_list_price">$30</li>
-                            <li class="pricing_block_list pricing_block_list_information">Free for life</li>
-                            <li class="pricing_block_list">1 Gb Of Space</li>
-                            <li class="pricing_block_list">1 Gb Of Space</li>
-                            <li class="pricing_block_list">1 Gb Of Space</li>
-                            <li class="pricing_block_list">1 Gb Of Space</li>
-                            <li class="pricing_block_list">1 Gb Of Space</li>
-                            <li class="pricing_block_list">1 Gb Of Space</li>
+                    <div class="pricing-block pricing-block__three">
+                        <ul class="pricing-block__list">
+                            <li class="pricing-block__list_text pricing-block__list_text_tarif">Pro</li>
+                            <li class="pricing-block__list_text pricing-block__list_text_price">$30</li>
+                            <li class="pricing-block__list_text pricing-block__list_text_information">Free for life</li>
+                            <li class="pricing-block__list_text">1 Gb Of Space</li>
+                            <li class="pricing-block__list_text">1 Gb Of Space</li>
+                            <li class="pricing-block__list_text">1 Gb Of Space</li>
+                            <li class="pricing-block__list_text">1 Gb Of Space</li>
+                            <li class="pricing-block__list_text">1 Gb Of Space</li>
+                            <li class="pricing-block__list_text">1 Gb Of Space</li>
                         </ul>
                     </div>
                 </div>
