--- a/awesome/index.html
+++ b/awesome/index.html
@@ -10,7 +10,36 @@
     <title>Awesome</title>
 </head>
 <body>
-    <main>
+    <section class="tabs">
+        <div class="wrapper">
+            <div class="tabs__block">
+                <ul class="tabs__table">
+                    <li class="tabs__table-item tabs__table-item-one">TAB 1</li>
+                    <li class="tabs__table-item">TAB 2</li>
+                    <li class="tabs__table-item">TAB 3</li>
+                </ul>
+            </div>
+            <div class="tabs__info">
+                <div class="tabs__info-text">
+                    <h2 class="tabs__info-subtitle">Tabs with soft transitioning effect.</h2>
+                    <div class="tabs__info-text-all">
+                        <p class="tabs__info-text-all-paragraf">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
+                        bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra 
+                        justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque 
+                        penatibus et magnis dis parturient montes.
+                        </p>
+                        <p class="tabs__info-text-all-paragraf tabs__info-text-all-paragraf-buttom">    
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
+                        bibendum laoreet.
+                        </p>
+                    </div>
+                    <button class="tabs__button">Download</button> 
+                </div>
+                <img class="tabs__img" src="images/Rectangle.svg">
+            </div>
+        </div>
+    </section>
+    <section class="awesome">
         <div class="wrapper">
             <h2>WHY THIS IS AWESOME</h2>
             <div class="block-line"></div>
@@ -43,6 +72,10 @@
                         elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
                 </div>
             </div>  
+        </div>
+    </section>
+    <section class="pricing">
+        <div class="wrapper">
             <div class="pricing">
                 <h2>PRICING OPTIONS</h2>
                 <div class="block-line"></div>
@@ -90,8 +123,8 @@
                         </ul>
                     </div>
                 </div>
-            </div>
+            </div> 
         </div>
-    </main>
+    </section>
 </body>
 </html>
