--- a/awesome/index.html
+++ b/awesome/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Awesome</title>
 </head>
@@ -21,28 +21,31 @@
             </div>
             <div class="tabs__info">
                 <div class="tabs__info-text">
-                    <h2 class="tabs__info-subtitle">Tabs with soft transitioning effect.</h2>
+                    <h3 class="tabs__info-subtitle">Tabs with soft transitioning effect.</h3>
                     <div class="tabs__info-text-all">
-                        <p class="tabs__info-text-all-paragraf">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
-                        bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra 
-                        justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque 
-                        penatibus et magnis dis parturient montes.
+                        <p class="tabs__info-text-all-paragraf">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean </p>
+                        <p>euismod</p>
+                        <p>bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et </p>
+                        <p>viverra </p>
+                        <p>justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque </p>
+                        <p>penatibus et magnis dis parturient montes.</p>
                         </p>
                         <p class="tabs__info-text-all-paragraf tabs__info-text-all-paragraf-buttom">    
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
-                        bibendum laoreet.
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean </p>
+                        <p>euismod</p> 
+                        <p>bibendum laoreet.</p>
                         </p>
                     </div>
-                    <button class="tabs__button">Download</button> 
+                    <a href="#" class="tabs__button">Download</a> 
                 </div>
-                <img class="tabs__img" src="images/Rectangle.svg">
+                <img class="tabs__img" src="images/Rectangle.png">
             </div>
         </div>
     </section>
     <section class="awesome">
         <div class="wrapper">
             <h2>WHY THIS IS AWESOME</h2>
-            <div class="block-line"></div>
             <div class="block-text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
@@ -76,9 +79,8 @@
     </section>
     <section class="pricing">
         <div class="wrapper">
-            <div class="pricing">
+            <div class="pricing-class">
                 <h2>PRICING OPTIONS</h2>
-                <div class="block-line"></div>
                 <div class="block-text">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
@@ -124,6 +126,84 @@
                     </div>
                 </div>
             </div> 
+        </div>
+    </section>
+    <div class="customers">
+        <div class="wrapper">
+            <div class="customers-info">
+                <h2>WHAT OUR CUSTOMERS ARE SAYING</h2> 
+                    <div class="block-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                <div class="customers-block">
+                    <div class="customer-block__comment">
+                        <div class="customer-block__comment-text">
+                            <p>Lorem ipsum dolor sit amet,</p> 
+                            <p>consectetur adipisicing elit. Doloribus </p>
+                            <p>accusamus expedita repellat similique</p> 
+                            <p>odio aspernatur ex, architecto eaque</p> 
+                            <p>quo suscipit.</p>
+                        </div>
+                        <div class="customer-information">
+                            <div class="customer-information__img">
+                                <img class="customer-img customer-img_nature" src="images/photo.jpg" alt="images">
+                            </div>
+                            <div class="customers-information__part">
+                                <h3 class="customers-information__name">
+                                    Davis Rhiel Madsen
+                                </h3>
+                                <p class="customers-information__prof">
+                                    Manager
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="customer-block__comment">
+                        <div class="customer-block__comment-text">
+                            <p>Lorem ipsum dolor sit amet,</p> 
+                            <p>consectetur adipisicing elit. Doloribus </p>
+                            <p>accusamus expedita repellat similique</p> 
+                            <p>odio aspernatur ex, architecto eaque</p> 
+                            <p>quo suscipit.</p>
+                        </div>
+                        <div class="customer-information">
+                            <div class="customer-information__img">
+                                <img class="customer-img customer-img_nature" src="images/photo.jpg" alt="images">
+                            </div>
+                            <div class="customers-information__part">
+                                <h3 class="customers-information__name">
+                                    Jaydon Rosser
+                                </h3>
+                                <p class="customers-information__prof">
+                                    Manager
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="customer-block__comment">
+                        <div class="customer-block__comment-text">
+                            <p>Lorem ipsum dolor sit amet,</p> 
+                            <p>consectetur adipisicing elit. Doloribus </p>
+                            <p>accusamus expedita repellat similique</p> 
+                            <p>odio aspernatur ex, architecto eaque</p> 
+                            <p>quo suscipit.</p>
+                        </div>
+                        <div class="customer-information">
+                            <div class="customer-information__img">
+                                <img class="customer-img customer-img_nature" src="images/photo.jpg" alt="images">
+                            </div>
+                            <div class="customers-information__part">
+                                <h3 class="customers-information__name">
+                                    Cooper Dorwart
+                                </h3>
+                                <p class="customers-information__prof">
+                                    Manager
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>  
         </div>
     </section>
 </body>
