--- a/awesome/index.html
+++ b/awesome/index.html
@@ -24,10 +24,10 @@
                     <h3 class="tabs__info-subtitle">Tabs with soft transitioning effect.</h3>
                     <div class="tabs__info-text-all">
                         <p class="tabs__info-text-all-paragraf">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean</p>
                         <p>euismod</p>
-                        <p>bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et </p>
-                        <p>viverra </p>
+                        <p>bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et</p>
+                        <p>viverra</p>
                         <p>justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque </p>
                         <p>penatibus et magnis dis parturient montes.</p>
                         </p>
@@ -138,11 +138,11 @@
                 <div class="customers-block">
                     <div class="customer-block__comment">
                         <div class="customer-block__comment-text">
-                            <p>Lorem ipsum dolor sit amet,</p> 
-                            <p>consectetur adipisicing elit. Doloribus </p>
-                            <p>accusamus expedita repellat similique</p> 
-                            <p>odio aspernatur ex, architecto eaque</p> 
-                            <p>quo suscipit.</p>
+                            <p>Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit. Doloribus 
+                                accusamus expedita repellat similique
+                                odio aspernatur ex, architecto eaque
+                                quo suscipit.</p>
                         </div>
                         <div class="customer-information">
                             <div class="customer-information__img">
@@ -160,11 +160,11 @@
                     </div>
                     <div class="customer-block__comment">
                         <div class="customer-block__comment-text">
-                            <p>Lorem ipsum dolor sit amet,</p> 
-                            <p>consectetur adipisicing elit. Doloribus </p>
-                            <p>accusamus expedita repellat similique</p> 
-                            <p>odio aspernatur ex, architecto eaque</p> 
-                            <p>quo suscipit.</p>
+                            <p>Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit. Doloribus 
+                                accusamus expedita repellat similique
+                                odio aspernatur ex, architecto eaque
+                                quo suscipit.</p>
                         </div>
                         <div class="customer-information">
                             <div class="customer-information__img">
@@ -182,11 +182,11 @@
                     </div>
                     <div class="customer-block__comment">
                         <div class="customer-block__comment-text">
-                            <p>Lorem ipsum dolor sit amet,</p> 
-                            <p>consectetur adipisicing elit. Doloribus </p>
-                            <p>accusamus expedita repellat similique</p> 
-                            <p>odio aspernatur ex, architecto eaque</p> 
-                            <p>quo suscipit.</p>
+                            <p>Lorem ipsum dolor sit amet,
+                            consectetur adipisicing elit. Doloribus 
+                            accusamus expedita repellat similique
+                            odio aspernatur ex, architecto eaque
+                            quo suscipit.</p>
                         </div>
                         <div class="customer-information">
                             <div class="customer-information__img">
