--- a/awesome/index.html
+++ b/awesome/index.html
@@ -10,20 +10,99 @@
     <title>Awesome</title>
 </head>
 <body>
+    <header class="header">
+        <div class="wrapper">
+            <div class="header-block">
+                <a href="#" class="header-picture">
+                    <img src="images/logo.svg" alt="axit_logo">
+                </a>
+                <nav class="nav">
+                    <div class="nav-list">
+                        <a href="#" class="nav-list__link">Features</a>
+                        <a href="#awesome" class="nav-list__link">About</a>
+                        <a href="#pricing" class="nav-list__link">Pricing</a>
+                        <a href="#customers" class="nav-list__link">Reviews</a>
+                        <a href="#" class="nav-list__link">Contact</a>
+                    </div>
+                </nav>      
+            </div>
+        </div>
+    </header>
+    <section class="banner">
+        <div class="wrapper">
+            <div class="banner-block">
+                <div class="banner-container">
+                    <img src="images/logoimg.svg" class="banner-logo" alt="axit_logo">
+                    <h1 class="banner-title">MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
+                    <p class="banner-text">Lorem ipsum dolor sit amet,</p>
+                    <p class="banner-text">consectetur adipiscing elit</p>
+                    <a class="banner-button" href="#">Download</a>
+                </div>
+                <div class="banner-form">
+                    <h4 class="banner-form__title">TRY YOUR 
+                        <span class="banner-form__title banner-form__title-red">FREE</span>
+                    TRIAL TODAY</h4>
+                        <input class="banner-input" type="text" name="user[name]" placeholder="Name"/>
+                        <input class="banner-input" type="text" name="user[phone]" placeholder="Phone"/>
+                        <input class="banner-input" type="text" name="user[password]" placeholder="Password" />
+                        <button class="banner-download" type="submit">Get Started</button>
+                </div>
+                    
+            </div>
+        </div>
+    </section>
+    <section class="social">
+        <div class="wrapper">
+            <div class="social-content">
+                <div class="social-information">
+                    <h4 class="social-text">
+                        Social Media
+                    </h4>
+                    <p class="social-paragraf">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Aenean euismod bibendum laoreet.
+                    </p>
+                </div>
+                <div class="social-img">
+                    <a class="social-img__link" href="https://ru-ru.facebook.com/">
+                        <img src="images/f_icon.png" alt="social_ico">
+                    </a>
+                    <a class="social-img__link" href="https://twitter.com/?lang=ru">
+                        <img src="images/t_icon.png" alt="social_ico">
+                    </a>
+                    <a class="social-img__link" href="https://www.linkedin.com/home?originalSubdomain=ru">
+                        <img src="images/l_icon.png" alt="social_ico">
+                    </a>
+                    <a class="social-img__link" href="https://www.pinterest.com/">
+                        <img src="images/p_icon.png" alt="social_ico">
+                    </a>
+                    <a class="social-img__link" href="https://www.instagram.com/">
+                        <img src="images/i_icon.png" alt="social_ico">
+                    </a>
+                    <a class="social-img__link" href="https://github.com/">
+                        <img src="images/g_icon.png" alt="social_ico">
+                    </a>
+                    <a class="social-img__link" href="http://rcc.ru/">
+                        <img src="images/r_icon.png" alt="social_ico">
+                    </a>           
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="tabs">
         <div class="wrapper">
-            <div class="tabs__block">
-                <ul class="tabs__table">
-                    <li class="tabs__table-item tabs__table-item-one">TAB 1</li>
-                    <li class="tabs__table-item">TAB 2</li>
-                    <li class="tabs__table-item">TAB 3</li>
+            <div class="tabs-block">
+                <ul class="tabs-table">
+                    <li class="tabs-table__item tabs-table__item-one">TAB 1</li>
+                    <li class="tabs-table__item">TAB 2</li>
+                    <li class="tabs-table__item">TAB 3</li>
                 </ul>
             </div>
-            <div class="tabs__info">
-                <div class="tabs__info-text">
-                    <h3 class="tabs__info-subtitle">Tabs with soft transitioning effect.</h3>
-                    <div class="tabs__info-text-all">
-                        <p class="tabs__info-text-all-paragraf">
+            <div class="tabs-info">
+                <div class="tabs-info__text">
+                    <h3 class="tabs-info__subtitle">Tabs with soft transitioning effect.</h3>
+                    <div class="tabs-info__text-all">
+                        <p class="tabs-info__text-all-paragraf">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean</p>
                         <p>euismod</p>
                         <p>bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et</p>
@@ -31,19 +110,19 @@
                         <p>justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque </p>
                         <p>penatibus et magnis dis parturient montes.</p>
                         </p>
-                        <p class="tabs__info-text-all-paragraf tabs__info-text-all-paragraf-buttom">    
+                        <p class="tabs-info__text-all-paragraf tabs-info__text-all-paragraf-buttom">    
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean </p>
                         <p>euismod</p> 
                         <p>bibendum laoreet.</p>
                         </p>
                     </div>
-                    <a href="#" class="tabs__button">Download</a> 
+                    <a href="#" class="tabs-button">Download</a> 
                 </div>
-                <img class="tabs__img" src="images/Rectangle.png">
+                <img class="tabs-img" src="images/Rectangle.png">
             </div>
         </div>
     </section>
-    <section class="awesome">
+    <section class="awesome" id="awesome">
         <div class="wrapper">
             <h2>WHY THIS IS AWESOME</h2>
             <div class="block-text">
@@ -77,7 +156,7 @@
             </div>  
         </div>
     </section>
-    <section class="pricing">
+    <section class="pricing" id="pricing">
         <div class="wrapper">
             <div class="pricing-class">
                 <h2>PRICING OPTIONS</h2>
@@ -128,7 +207,7 @@
             </div> 
         </div>
     </section>
-    <div class="customers">
+    <div class="customers" id="customers">
         <div class="wrapper">
             <div class="customers-info">
                 <h2>WHAT OUR CUSTOMERS ARE SAYING</h2> 
@@ -206,5 +285,68 @@
             </div>  
         </div>
     </section>
+    <section class="stylish">
+        <div class="wrapper">
+            <div class="stylish-block">
+                <div class="stylish-info">
+                    <h3 class="stylish-info__text">STYLISH AXURE DESIGN</h3>
+                </div>
+                <div class="stylish-info">
+                    <p class="stylish-info__paragraf">Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
+                    <a class="stylish-info__button" href="#">Download</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="contact" id="contact">
+        <div class="wrapper">
+            <h2>CONTACT US</h2>
+            <div class="block-text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class="contact-container">
+                <div class="contact-left">
+                    <input class="contact-input__text" type="text" name="user[name]" placeholder="Name"/>
+                    <input class="contact-input__text" type="text" name="user[email]" placeholder="Email"/>
+                    <input class="contact-input__text" type="text" name="user[password]" placeholder="Password" />
+                </div>
+                <textarea class="contact-input__message">
+                    Message
+                </textarea>
+            </div>
+            <div class="contact-button">
+                <a class="contact-button" href="#">Send Message</a>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="wrapper">
+            <div class="footer-img">
+                <a class="footer-img__link" href="https://ru-ru.facebook.com/">
+                    <img src="images/f_icon.png" alt="footer">
+                </a>
+                <a class="footer-img__link" href="https://twitter.com/?lang=ru">
+                    <img src="images/t_icon.png" alt="footer">
+                </a>
+                <a class="footer-img__link" href="https://www.linkedin.com/home?originalSubdomain=ru">
+                    <img src="images/l_icon.png" alt="footer">
+                </a>
+                <a class="footer-img__link" href="https://www.pinterest.com/">
+                    <img src="images/p_icon.png" alt="footer">
+                </a>
+                <a class="footer-img__link" href="https://www.instagram.com/">
+                    <img src="images/i_icon.png" alt="footer">
+                </a>
+                <a class="footer-img__link" href="https://github.com/">
+                    <img src="images/g_icon.png" alt="footer">
+                </a>
+                <a class="footer-img__link" href="http://rcc.ru/">
+                    <img src="images/r_icon.png" alt="footer">
+                </a>           
+            </div>
+            <p class="footer-text">© 2015 Axure Themes</p>
+        </div>
+        
+    </footer>
 </body>
 </html>
