--- a/awesome/index.html
+++ b/awesome/index.html
@@ -304,19 +304,22 @@
             <div class="block-text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
-            <div class="contact-container">
-                <div class="contact-left">
-                    <input class="contact-input__text" type="text" name="user[name]" placeholder="Name"/>
-                    <input class="contact-input__text" type="text" name="user[email]" placeholder="Email"/>
-                    <input class="contact-input__text" type="text" name="user[password]" placeholder="Password" />
-                </div>
-                <textarea class="contact-input__message">
-                    Message
-                </textarea>
+            <div class="contact-block">
+                <div class="contact-container">
+                    <div class="contact-left">
+                        <input class="contact-input__text" type="text" name="user[name]" placeholder="Name"/>
+                        <input class="contact-input__text" type="text" name="user[email]" placeholder="Email"/>
+                        <input class="contact-input__text" type="text" name="user[password]" placeholder="Password" />
+                    </div>
+                    <textarea class="contact-input__message">
+                        Message
+                    </textarea>
+                    </div>
+                    <div class="contact-button">
+                        <a class="contact-button" href="#">Send Message</a>
+                    </div>
             </div>
-            <div class="contact-button">
-                <a class="contact-button" href="#">Send Message</a>
-            </div>
+            
         </div>
     </section>
     <footer class="footer">
