--- a/awesome/index.html
+++ b/awesome/index.html
@@ -44,7 +44,7 @@
                     TRIAL TODAY</h4>
                         <input class="banner-input" type="text" name="user[name]" placeholder="Name"/>
                         <input class="banner-input" type="text" name="user[phone]" placeholder="Phone"/>
-                        <input class="banner-input" type="text" name="user[password]" placeholder="Password" />
+                        <input class="banner-input" type="password" name="user[password]" placeholder="Password" />
                         <button class="banner-download" type="submit">Get Started</button>
                 </div>
                     
@@ -309,7 +309,7 @@
                     <div class="contact-left">
                         <input class="contact-input__text" type="text" name="user[name]" placeholder="Name"/>
                         <input class="contact-input__text" type="text" name="user[email]" placeholder="Email"/>
-                        <input class="contact-input__text" type="text" name="user[password]" placeholder="Password" />
+                        <input class="contact-input__text" type="password" name="user[password]" placeholder="Password" />
                     </div>
                     <textarea class="contact-input__message">
                         Message
