--- a/awesome/index.html
+++ b/awesome/index.html
@@ -326,25 +326,25 @@
         <div class="wrapper">
             <div class="footer-img">
                 <a class="footer-img__link" href="https://ru-ru.facebook.com/">
-                    <img src="images/f_icon.png" alt="footer">
+                    <img src="images/f.svg" alt="footer">
                 </a>
                 <a class="footer-img__link" href="https://twitter.com/?lang=ru">
-                    <img src="images/t_icon.png" alt="footer">
+                    <img src="images/Vector (1).svg" alt="footer">
                 </a>
                 <a class="footer-img__link" href="https://www.linkedin.com/home?originalSubdomain=ru">
-                    <img src="images/l_icon.png" alt="footer">
+                    <img src="images/Vector (2).svg" alt="footer">
                 </a>
                 <a class="footer-img__link" href="https://www.pinterest.com/">
-                    <img src="images/p_icon.png" alt="footer">
+                    <img src="images/Vector (3).svg" alt="footer">
                 </a>
                 <a class="footer-img__link" href="https://www.instagram.com/">
-                    <img src="images/i_icon.png" alt="footer">
+                    <img src="images/Vector (4).svg" alt="footer">
                 </a>
                 <a class="footer-img__link" href="https://github.com/">
-                    <img src="images/g_icon.png" alt="footer">
+                    <img src="images/Vector (5).svg" alt="footer">
                 </a>
                 <a class="footer-img__link" href="http://rcc.ru/">
-                    <img src="images/r_icon.png" alt="footer">
+                    <img src="images/Vector (6).svg" alt="footer">
                 </a>           
             </div>
             <p class="footer-text">© 2015 Axure Themes</p>
