--- a/awesome/index.html
+++ b/awesome/index.html
@@ -42,12 +42,13 @@
                     <h4 class="banner-form__title">TRY YOUR 
                         <span class="banner-form__title banner-form__title-red">FREE</span>
                     TRIAL TODAY</h4>
-                        <input class="banner-input" type="text" name="user[name]" placeholder="Name"/>
-                        <input class="banner-input" type="text" name="user[phone]" placeholder="Phone"/>
-                        <input class="banner-input" type="password" name="user[password]" placeholder="Password" />
-                        <button class="banner-download" type="submit">Get Started</button>
+                    <div class="banner-input">
+                        <input class="banner-input__text" type="text" name="user[name]" placeholder="Name"/>
+                        <input class="banner-input__text" type="text" name="user[phone]" placeholder="Phone"/>
+                        <input class="banner-input__text" type="password" name="user[password]" placeholder="Password" /> 
+                    </div>
+                    <button class="banner-download" type="submit">Get Started</button>
                 </div>
-                    
             </div>
         </div>
     </section>
@@ -304,22 +305,19 @@
             <div class="block-text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
-            <div class="contact-block">
+            <di class="contact-form">
                 <div class="contact-container">
-                    <div class="contact-left">
+                    <div class="contact-input">
                         <input class="contact-input__text" type="text" name="user[name]" placeholder="Name"/>
                         <input class="contact-input__text" type="text" name="user[email]" placeholder="Email"/>
                         <input class="contact-input__text" type="password" name="user[password]" placeholder="Password" />
                     </div>
-                    <textarea class="contact-input__message">
-                        Message
-                    </textarea>
-                    </div>
-                    <div class="contact-button">
-                        <a class="contact-button" href="#">Send Message</a>
-                    </div>
+                    <textarea class="contact-input__message" placeholder="Message"></textarea>
+                </div>
+                <div class="contact-button">
+                    <button class="contact-button__click" type="submit" href="#">Send Message</button>
+                </div>
             </div>
-            
         </div>
     </section>
     <footer class="footer">
