--- a/awesome/index.html
+++ b/awesome/index.html
@@ -24,7 +24,7 @@
                         <a href="#customers" class="nav-list__link">Reviews</a>
                         <a href="#" class="nav-list__link">Contact</a>
                     </div>
-                </nav>      
+                </nav> 
             </div>
         </div>
     </header>
@@ -34,8 +34,9 @@
                 <div class="banner-container">
                     <img src="images/logoimg.svg" class="banner-logo" alt="axit_logo">
                     <h1 class="banner-title">MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
-                    <p class="banner-text">Lorem ipsum dolor sit amet,</p>
-                    <p class="banner-text">consectetur adipiscing elit</p>
+                    <div class="banner-text__info">
+                        <p class="banner-text">Lorem ipsum dolor sit amet,</p>
+                        <p class="banner-text">consectetur adipiscing elit</p></div>
                     <a class="banner-button" href="#">Download</a>
                 </div>
                 <div class="banner-form">
@@ -66,25 +67,41 @@
                 </div>
                 <div class="social-img">
                     <a class="social-img__link" href="https://ru-ru.facebook.com/">
-                        <img src="images/f_icon.png" alt="social_ico">
+                        <svg class="social-img__link-media" width="70" height="70" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M24.5276 57.3333H35.1942V35.9733H44.8049L45.8609 25.36H35.1942V20C35.1942 19.2927 35.4752 18.6144 35.9753 18.1143C36.4754 17.6142 37.1537 17.3333 37.8609 17.3333H45.8609V6.66663H37.8609C34.3247 6.66663 30.9333 8.07138 28.4328 10.5719C25.9323 13.0724 24.5276 16.4637 24.5276 20V25.36H19.1942L18.1382 35.9733H24.5276V57.3333Z" fill="#CCCCCC"/>
+                        </svg>                  
                     </a>
                     <a class="social-img__link" href="https://twitter.com/?lang=ru">
-                        <img src="images/t_icon.png" alt="social_ico">
+                        <svg class="social-img__link-media" width="70" height="70" viewBox="0 0 70 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M57.2629 23.3247C57.3008 23.8351 57.3008 24.3426 57.3008 24.8501C57.3008 40.3813 45.4796 58.278 23.8758 58.278C17.22 58.278 11.0366 56.3501 5.83331 53.0018C6.77831 53.1097 7.68831 53.1476 8.67123 53.1476C13.9591 53.1604 19.0973 51.3922 23.2575 48.128C20.8058 48.0836 18.4292 47.2748 16.4594 45.8143C14.4897 44.3539 13.0252 42.3148 12.2704 39.9818C12.9966 40.0897 13.7258 40.1626 14.49 40.1626C15.5429 40.1626 16.6016 40.0168 17.5846 39.763C14.9239 39.2258 12.5314 37.7836 10.8139 35.6817C9.09637 33.5797 8.15992 30.9478 8.16373 28.2334V28.0876C9.72998 28.9597 11.5471 29.5051 13.4721 29.578C11.8594 28.5064 10.5371 27.0522 9.62305 25.3453C8.70903 23.6384 8.23173 21.7317 8.23373 19.7955C8.23373 17.6138 8.81415 15.613 9.83206 13.8688C12.7841 17.5001 16.466 20.4709 20.6393 22.5887C24.8126 24.7065 29.3841 25.924 34.0579 26.1626C33.8771 25.2876 33.7662 24.3805 33.7662 23.4705C33.7655 21.9275 34.0688 20.3994 34.659 18.9737C35.2491 17.548 36.1144 16.2526 37.2055 15.1615C38.2966 14.0704 39.592 13.205 41.0178 12.6149C42.4435 12.0248 43.9715 11.7214 45.5146 11.7222C48.8979 11.7222 51.9516 13.1397 54.0983 15.4322C56.7285 14.9236 59.2507 13.9634 61.5533 12.5943C60.6766 15.3091 58.8401 17.6112 56.3879 19.0693C58.7206 18.8032 61.0004 18.1897 63.1516 17.2493C61.5449 19.5916 59.554 21.6457 57.2629 23.3247Z" fill="#CCCCCC"/>
+                        </svg>                 
                     </a>
                     <a class="social-img__link" href="https://www.linkedin.com/home?originalSubdomain=ru">
-                        <img src="images/l_icon.png" alt="social_ico">
+                        <svg class="social-img__link-media" width="70" height="70" viewBox="0 0 70 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M58.3333 8.75H11.6667C10.8931 8.75 10.1513 9.05729 9.60427 9.60427C9.05729 10.1513 8.75 10.8931 8.75 11.6667V58.3333C8.75 59.1069 9.05729 59.8488 9.60427 60.3957C10.1513 60.9427 10.8931 61.25 11.6667 61.25H58.3333C59.1069 61.25 59.8488 60.9427 60.3957 60.3957C60.9427 59.8488 61.25 59.1069 61.25 58.3333V11.6667C61.25 10.8931 60.9427 10.1513 60.3957 9.60427C59.8488 9.05729 59.1069 8.75 58.3333 8.75ZM24.3221 53.4829H16.5287V28.4287H24.3221V53.4829ZM20.4254 25.0075C19.228 25.0075 18.0796 24.5318 17.2328 23.6851C16.3861 22.8384 15.9104 21.69 15.9104 20.4925C15.9104 19.295 16.3861 18.1466 17.2328 17.2999C18.0796 16.4532 19.228 15.9775 20.4254 15.9775C21.6229 15.9775 22.7713 16.4532 23.618 17.2999C24.4647 18.1466 24.9404 19.295 24.9404 20.4925C24.9404 21.69 24.4647 22.8384 23.618 23.6851C22.7713 24.5318 21.6229 25.0075 20.4254 25.0075ZM53.4858 53.4829H45.7012V41.3C45.7012 38.395 45.6488 34.6588 41.6529 34.6588C37.5988 34.6588 36.9833 37.8263 36.9833 41.0958V53.4858H29.2046V28.4317H36.6713V31.8558H36.7792C37.8146 29.8871 40.3579 27.8104 44.1408 27.8104C52.0275 27.8104 53.4829 32.9963 53.4829 39.7454V53.4829H53.4858Z" fill="#CCCCCC"/>
+                        </svg>
                     </a>
                     <a class="social-img__link" href="https://www.pinterest.com/">
-                        <img src="images/p_icon.png" alt="social_ico">
+                        <svg class="social-img__link-media" width="70" height="70" viewBox="0 0 70 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M26.3667 62.825C29.1667 63.6709 31.9958 64.1667 35 64.1667C42.7355 64.1667 50.1542 61.0938 55.624 55.624C61.0938 50.1542 64.1667 42.7355 64.1667 35C64.1667 31.1698 63.4123 27.3771 61.9465 23.8384C60.4807 20.2998 58.3323 17.0845 55.624 14.3761C52.9156 11.6677 49.7003 9.51932 46.1616 8.05355C42.623 6.58779 38.8302 5.83337 35 5.83337C31.1698 5.83337 27.3771 6.58779 23.8384 8.05355C20.2997 9.51932 17.0844 11.6677 14.3761 14.3761C8.90625 19.8459 5.83334 27.2646 5.83334 35C5.83334 47.3959 13.6208 58.0417 24.6167 62.2417C24.3542 59.9667 24.0917 56.2042 24.6167 53.6084L27.9708 39.2C27.9708 39.2 27.125 37.5084 27.125 34.825C27.125 30.8 29.6333 27.7959 32.4917 27.7959C35 27.7959 36.1667 29.6334 36.1667 31.9959C36.1667 34.5042 34.5042 38.0917 33.6583 41.5334C33.1625 44.3917 35.175 46.9 38.0917 46.9C43.2833 46.9 47.3083 41.3584 47.3083 33.5417C47.3083 26.5417 42.2917 21.7584 35.0875 21.7584C26.8625 21.7584 22.0208 27.8834 22.0208 34.3292C22.0208 36.8375 22.8375 39.375 24.1792 41.0375C24.4417 41.2125 24.4417 41.4459 24.3542 41.8834L23.5083 45.0625C23.5083 45.5584 23.1875 45.7334 22.6917 45.3834C18.9583 43.75 16.8 38.4417 16.8 34.1542C16.8 24.9375 23.3333 16.5667 35.9333 16.5667C45.9667 16.5667 53.7834 23.7709 53.7834 33.3375C53.7834 43.3709 47.5708 51.4209 38.675 51.4209C35.8458 51.4209 33.075 49.9042 32.0833 48.125L30.1292 55.0375C29.4583 57.5459 27.6208 60.9 26.3667 62.9125V62.825V62.825Z" fill="#CCCCCC"/>
+                        </svg>                            
                     </a>
-                    <a class="social-img__link" href="https://www.instagram.com/">
-                        <img src="images/i_icon.png" alt="social_ico">
+                    <a class="social-img__link" href="https://www.instagram.com/" target="_blank">
+                        <svg class="social-img__link-media" width="70" height="70" viewBox="0 0 70 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M61.0956 24.2228C61.0661 22.0138 60.6526 19.8267 59.8735 17.7595C59.1978 16.0157 58.1659 14.4321 56.8436 13.1098C55.5212 11.7875 53.9376 10.7555 52.1939 10.0799C50.1532 9.31383 47.9973 8.89962 45.8181 8.85487C43.0122 8.72946 42.1226 8.69446 35.0001 8.69446C27.8776 8.69446 26.9647 8.69446 24.1793 8.85487C22.001 8.89995 19.8462 9.31416 17.8064 10.0799C16.0624 10.7551 14.4785 11.7868 13.1562 13.1092C11.8338 14.4316 10.802 16.0155 10.1268 17.7595C9.35923 19.7986 8.94592 21.9539 8.90473 24.1324C8.77931 26.9411 8.74139 27.8307 8.74139 34.9532C8.74139 42.0757 8.74139 42.9857 8.90473 45.774C8.94848 47.9557 9.35973 50.1082 10.1268 52.1528C10.8031 53.8963 11.8357 55.4795 13.1585 56.8013C14.4813 58.1231 16.0653 59.1545 17.8093 59.8295C19.8435 60.6263 21.9987 61.0701 24.1822 61.142C26.991 61.2674 27.8806 61.3053 35.0031 61.3053C42.1256 61.3053 43.0385 61.3053 45.8239 61.142C48.0031 61.099 50.1591 60.6858 52.1997 59.9199C53.943 59.2434 55.5262 58.2112 56.8484 56.889C58.1707 55.5668 59.2029 53.9836 59.8793 52.2403C60.6464 50.1986 61.0576 48.0461 61.1014 45.8615C61.2268 43.0557 61.2647 42.1661 61.2647 35.0407C61.2589 27.9182 61.2589 27.014 61.0956 24.2228ZM34.9826 48.4224C27.5335 48.4224 21.4989 42.3878 21.4989 34.9386C21.4989 27.4895 27.5335 21.4549 34.9826 21.4549C38.5588 21.4549 41.9884 22.8755 44.5171 25.4042C47.0458 27.9329 48.4664 31.3625 48.4664 34.9386C48.4664 38.5147 47.0458 41.9444 44.5171 44.4731C41.9884 47.0018 38.5588 48.4224 34.9826 48.4224ZM49.0031 24.1003C48.5901 24.1007 48.181 24.0196 47.7994 23.8617C47.4177 23.7039 47.071 23.4723 46.7789 23.1802C46.4869 22.8882 46.2553 22.5414 46.0974 22.1598C45.9396 21.7782 45.8585 21.3691 45.8589 20.9561C45.8589 20.5434 45.9402 20.1348 46.0981 19.7535C46.2561 19.3722 46.4875 19.0257 46.7794 18.7339C47.0712 18.4421 47.4176 18.2106 47.7989 18.0526C48.1802 17.8947 48.5889 17.8134 49.0016 17.8134C49.4143 17.8134 49.823 17.8947 50.2043 18.0526C50.5856 18.2106 50.932 18.4421 51.2238 18.7339C51.5157 19.0257 51.7472 19.3722 51.9051 19.7535C52.063 20.1348 52.1443 20.5434 52.1443 20.9561C52.1443 22.6945 50.7385 24.1003 49.0031 24.1003Z" fill="#CCCCCC"/>
+                            <path d="M34.9829 43.6974C39.8202 43.6974 43.7416 39.776 43.7416 34.9387C43.7416 30.1014 39.8202 26.1799 34.9829 26.1799C30.1456 26.1799 26.2242 30.1014 26.2242 34.9387C26.2242 39.776 30.1456 43.6974 34.9829 43.6974Z" fill="#CCCCCC"/>
+                        </svg>  
                     </a>
-                    <a class="social-img__link" href="https://github.com/">
-                        <img src="images/g_icon.png" alt="social_ico">
+                    <a class="social-img__link" href="https://github.com/" target="_blank">
+                        <svg class="social-img__link-media" width="70" height="70" viewBox="0 0 70 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M35.0754 5.83337C19.0075 5.83337 5.98454 18.8563 5.98454 34.9242C5.98454 47.775 14.3175 58.6805 25.8791 62.5305C27.3345 62.793 27.8595 61.8975 27.8595 61.1275C27.8595 60.4363 27.8362 58.6046 27.8275 56.1809C19.7337 57.9367 18.0245 52.2784 18.0245 52.2784C16.7062 48.9184 14.7958 48.023 14.7958 48.023C12.1562 46.2175 14.997 46.2584 14.997 46.2584C17.9195 46.4625 19.4508 49.2567 19.4508 49.2567C22.0466 53.7017 26.2641 52.4184 27.915 51.6746C28.1804 49.7934 28.9387 48.51 29.767 47.7838C23.3095 47.0517 16.5195 44.555 16.5195 33.4046C16.5195 30.2342 17.6541 27.6325 19.5062 25.6025C19.2116 24.8646 18.2054 21.9042 19.795 17.9025C19.795 17.9025 22.2362 17.118 27.7925 20.8805C30.1654 20.2349 32.6132 19.9054 35.0725 19.9005C37.5317 19.9044 39.9797 20.234 42.3525 20.8805C47.9116 17.115 50.35 17.9025 50.35 17.9025C51.9395 21.9042 50.942 24.8646 50.6387 25.6025C52.5054 27.6325 53.6254 30.2313 53.6254 33.4046C53.6254 44.5842 46.8295 47.04 40.3487 47.7605C41.3841 48.6588 42.3175 50.4321 42.3175 53.1446C42.3175 57.0355 42.2825 60.1738 42.2825 61.1275C42.2825 61.9063 42.8016 62.8105 44.2862 62.5246C55.842 58.6688 64.1662 47.7721 64.1662 34.9242C64.1662 18.8563 51.1433 5.83337 35.0754 5.83337Z" fill="#CCCCCC"/>
+                        </svg>                            
                     </a>
-                    <a class="social-img__link" href="http://rcc.ru/">
-                        <img src="images/r_icon.png" alt="social_ico">
+                    <a class="social-img__link" href="http://rcc.ru/" target="_blank">
+                        <svg class="social-img__link-media" width="70" height="70" viewBox="0 0 70 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M18.025 58.3334C21.5366 58.3334 24.3833 55.4866 24.3833 51.975C24.3833 48.4634 21.5366 45.6167 18.025 45.6167C14.5134 45.6167 11.6667 48.4634 11.6667 51.975C11.6667 55.4866 14.5134 58.3334 18.025 58.3334Z" fill="#CCCCCC"/>
+                            <path d="M11.6667 12.9498V21.204C32.1708 21.204 48.7958 37.829 48.7958 58.3332H57.05C57.05 33.279 36.7208 12.9498 11.6667 12.9498ZM11.6667 29.4582V37.7123C23.0417 37.7123 32.2875 46.9582 32.2875 58.3332H40.5417C40.5417 42.379 27.6208 29.4582 11.6667 29.4582Z" fill="#CCCCCC"/>
+                        </svg>                            
                     </a>           
                 </div>
             </div>
@@ -98,29 +115,23 @@
                     <li class="tabs-table__item">TAB 2</li>
                     <li class="tabs-table__item">TAB 3</li>
                 </ul>
-            </div>
-            <div class="tabs-info">
-                <div class="tabs-info__text">
-                    <h3 class="tabs-info__subtitle">Tabs with soft transitioning effect.</h3>
-                    <div class="tabs-info__text-all">
-                        <p class="tabs-info__text-all-paragraf">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean</p>
-                        <p>euismod</p>
-                        <p>bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et</p>
-                        <p>viverra</p>
-                        <p>justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque </p>
-                        <p>penatibus et magnis dis parturient montes.</p>
-                        </p>
-                        <p class="tabs-info__text-all-paragraf tabs-info__text-all-paragraf-buttom">    
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean </p>
-                        <p>euismod</p> 
-                        <p>bibendum laoreet.</p>
-                        </p>
+                <div class="tabs-info">
+                    <div class="tabs-info__text">
+                        <h3 class="tabs-info__subtitle">Tabs with soft transitioning effect.</h3>
+                        <div class="tabs-block__info">
+                            <p class="tabs-info__text-all-paragraf">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
+                                bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra 
+                                justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque 
+                                penatibus et magnis dis parturient montes.</p>
+                            <p class="tabs-info__text-all-paragraf tabs-info__text-all-paragraf-buttom">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
+                                bibendum laoreet.</p>
+                            <a href="#" class="tabs-button">Download</a> 
+                        </div>
                     </div>
-                    <a href="#" class="tabs-button">Download</a> 
+                    <img class="tabs-img" src="images/Rectangle.png">
                 </div>
-                <img class="tabs-img" src="images/Rectangle.png">
             </div>
+            
         </div>
     </section>
     <section class="awesome" id="awesome">
@@ -140,9 +151,9 @@
                 </div>
                 <div class="awesome-block__cart awesome-block__cart_two">
                     <div class="awesome-block__circle awesome-block__circle_two">
-                        <img src="images/Vector.svg" alt="keyboard">
+                        <img src="images/klava.svg" alt="keyboard">
                     </div>
-                        <h4>Thoughtful Design</h4>
+                    <h4>Thoughtful Design</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
                         elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
                 </div>
@@ -307,12 +318,15 @@
             </div>
             <di class="contact-form">
                 <div class="contact-container">
-                    <div class="contact-input">
+                    <div class="contact-input__left">
                         <input class="contact-input__text" type="text" name="user[name]" placeholder="Name"/>
                         <input class="contact-input__text" type="text" name="user[email]" placeholder="Email"/>
                         <input class="contact-input__text" type="password" name="user[password]" placeholder="Password" />
                     </div>
-                    <textarea class="contact-input__message" placeholder="Message"></textarea>
+                    <div class="contact-input__right">
+                        <textarea class="contact-input__message" placeholder="Message"></textarea>
+                    </div>
+                    
                 </div>
                 <div class="contact-button">
                     <button class="contact-button__click" type="submit" href="#">Send Message</button>
@@ -324,7 +338,7 @@
         <div class="wrapper">
             <div class="footer-img">
                 <a class="footer-img__link" href="https://ru-ru.facebook.com/">
-                    <img src="images/f.svg" alt="footer">
+                    <img src="images/Vector.svg" alt="footer">
                 </a>
                 <a class="footer-img__link" href="https://twitter.com/?lang=ru">
                     <img src="images/Vector (1).svg" alt="footer">
